Реализует вывод ошибок с сервера для формы логина #79

--- a/src/components/common/FormsControls/FormsControls.module.css
+++ b/src/components/common/FormsControls/FormsControls.module.css
@@ -1,8 +1,13 @@
 .formControl.error input,
 .formControl.error textarea {
-    border: 1px solid red
+    border: 1px solid red;
 }
 
 .formControl.error span {
-    color: red
+    color: red;
+}
+
+.formError {
+    border: 1px solid red;
+    color: red;
 }
