--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #dee1e5;
 }
 
 code {
@@ -23,5 +24,20 @@ code {
 
 .main-content {
   grid-area: main;
-  background-color: rgba(192, 109, 132, 0.5);
+  background-color: #eef1f4;
+  padding: 10px 20px
+}
+
+a {
+  color: #a7b3cb;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+a:active {
+  color: #ffffff;
 }
